<resources>
    <string name="app_name">Project-Sleep-Alarm</string>
    <string name="btnCancel">btnCancel</string>
    <string name="Cancel">Cancel</string>
    <string name="txtBedTime">Bed Time</string>
    <string name="txtWakeUpTime">Wake Up Time</string>
    <string name="txtHowAreYou">How Are You Feeling?</string>
    <string name="txtHourSlept">Hours Slept</string>
    <string name="txtBed">Bed time</string>
    <string name="txtWakeup">Wake Up Time</string>
    <string name="btnRecord">Start Recording</string>
    <string name="btnStart">Start Playing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNight">Nighty-Night</string>
    <string name="avghour">Average Sleep Hour: </string>
</resources>
